Deploying nomad files

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -316,7 +316,7 @@ staging:promote:
 
 #tbd: where do we deploy with GPU
 
-staging:deploy:
+staging:deploy:cpu:
   stage: staging-deploy
   image: docker.registry.verbio.com/cognitive/nomad:1.0.2
   only:
@@ -329,8 +329,26 @@ staging:deploy:
     - cd deploy/nomad
     - export NOMAD_IP=$(echo ${CI_ENVIRONMENT_URL} | cut -d / -f 3 | cut -d ':' -f 1)
     - export NOMAD_ADDR=http://$NOMAD_IP:4646
-    - echo "Deploying staging version ${DOCKER_IMAGE_VERSION} into ${NOMAD_ADDR}"
+    - echo "Deploying CPU staging version ${DOCKER_IMAGE_VERSION} into ${NOMAD_ADDR}"
     - NOMAD_VAR_VERSION=${DOCKER_IMAGE_VERSION} NOMAD_VAR_ASR4_JOB_ID=${JOB_ID} NOMAD_VAR_GITLAB_TOKEN=${GITLAB_TOKEN} nomad job run asr4-staging.nomad
+
+staging:deploy:gpu:
+  stage: staging-deploy
+  image: docker.registry.verbio.com/cognitive/nomad:1.0.2
+  only:
+    - tags
+  needs: ["staging:promote", "python:build:latest_bin"]
+  environment:
+    name: pre-production/asr4
+    action: start
+  script:
+    - cd deploy/nomad
+    - export NOMAD_IP=$(echo ${CI_ENVIRONMENT_URL} | cut -d / -f 3 | cut -d ':' -f 1)
+    - export NOMAD_ADDR=http://$NOMAD_IP:4646
+    - echo "Deploying GPU staging version ${DOCKER_IMAGE_VERSION} into ${NOMAD_ADDR}"
+    - NOMAD_VAR_VERSION=${DOCKER_IMAGE_VERSION} NOMAD_VAR_ASR4_JOB_ID=${JOB_ID} NOMAD_VAR_GITLAB_TOKEN=${GITLAB_TOKEN} nomad job run asr4-staging-gpu.nomad
+
+
 
 staging:e2e:cpu:
   stage: staging-e2e
@@ -356,7 +374,7 @@ staging:e2e:gpu:
     - tags
   needs: ["staging:deploy"]
   script:
-    - echo "E2E tests for new release"
+    - echo "E2E tests for GPU new release"
 
 release:promote:
   stage: release-promote
@@ -403,4 +421,4 @@ cleanup:
     - docker image rm "${DOCKER_RELEASE_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
     - docker image rm "${DOCKER_TESTING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
     - docker image rm "${DOCKER_STAGING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
-    - docker image rm "${DOCKER_RELEASE_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+    - docker image rm "${DOCKER_RELEASE_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
