--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -358,7 +358,7 @@ staging:e2e:cpu:
       - LANGUAGE: [en-us, es, pt-br]
   only:
     - tags
-  needs: ["staging:deploy"]
+  needs: ["staging:deploy:cpu"]
   script:
     - echo "E2E tests for new release"
 
@@ -372,7 +372,7 @@ staging:e2e:gpu:
       - LANGUAGE: [en-us, es, pt-br]
   only:
     - tags
-  needs: ["staging:deploy"]
+  needs: ["staging:deploy:gpu"]
   script:
     - echo "E2E tests for GPU new release"
 
