--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ version = {file = ["VERSION"]}
 [project.optional-dependencies]
 client = [
     "resampy >= 0.4.2",
+    "csr-evaluation-tools @ git+https://asr4:glpat-_LvzW6GDKeDMY5stSszm@gitlab.lan.verbio.com/csr/csr-evaluation-tools.git"
 ]
 server = [
     "grpcio-health-checking >= 1.47.0",
