--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -107,8 +107,8 @@ python:test:coverage:
     - pip install torch==1.12.1+cpu --extra-index-url https://download.pytorch.org/whl/cpu
     - pip install .[server,cpu,test]
     - citbx install packages verbio-verbio8k-es-es-am
-    - yum-config-manager --enable verbio-internal-staging
-    - yum install -y asrtest-tools
+    - echo 'deb [ arch=amd64,any ] https://pkg-repos.lan.verbio.com/deb/internal jessie staging' >> /etc/apt/sources.list
+    - apt-get update && apt-get install -y -t jessie asrtest-tools libffi-dev jq
     - pip install .[client,test]
   script:
     - pytest tests/unit tests/functional --cov=asr4 --cov-report=html:coverage --cov-report=term --verbose
