--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -113,6 +113,12 @@ python:test:coverage:
   script:
     - pytest tests/unit tests/functional --cov=asr4 --cov-report=html:coverage --cov-report=term --verbose
     - pytest tests/integration --junit-xml=report.xml --verbose --capture=no
+  services:
+    - name: ${DOCKER_TESTING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}
+      alias: asr4-server
+      variables:
+        LANGUAGE: en-us
+
   artifacts:
     expire_in: 30 days
     paths:
