--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -210,6 +210,7 @@ testing:promote:gpu:
   stage: testing-integration
   only:
     - tags
+    - web
   before_script:
     - echo 'deb [ arch=amd64,any ] https://pkg-repos.lan.verbio.com/deb/internal jessie staging' >> /etc/apt/sources.list
     - apt-get update && apt-get install -y -t jessie asrtest-tools libffi-dev jq
