--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -345,6 +345,7 @@ staging:deploy:gpu:
   image: docker.registry.verbio.com/cognitive/nomad:1.0.2
   only:
     - tags
+  allow_failure: true
   needs: ["staging:promote", "python:build:latest_bin"]
   environment:
     name: pre-production/asr4
@@ -374,6 +375,7 @@ staging:e2e:gpu:
   stage: staging-e2e
   tags:
     - gpu
+  allow_failure: true
   image: "${DOCKER_STAGING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
   parallel:
     matrix:
