--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,6 +62,8 @@ python:test:cpu:
   before_script:
     - pip install torch==1.12.1+cpu --extra-index-url https://download.pytorch.org/whl/cpu
     - pip install .[server,cpu,test]
+    - pip uninstall protobuf
+    - pip install protobuf==3.20.1
     - citbx install packages verbio-verbio8k-es-es-am
   script:
     - python --version
@@ -79,6 +81,8 @@ python:test:gpu:
   before_script:
     - source ~/.bashrc
     - CUDACXX=/usr/local/cuda/bin/nvcc LDFLAGS="-L/root/miniconda3/lib/ -liomp5" pip install .[server,gpu,test]
+    - pip uninstall protobuf
+    - pip install protobuf==3.20.1
     - citbx install packages verbio-verbio8k-es-es-am
   script:
     - python --version
@@ -106,7 +110,8 @@ python:test:coverage:
   before_script:
     - pip install torch==1.12.1+cpu --extra-index-url https://download.pytorch.org/whl/cpu
     - pip install .[server,cpu,test]
-    - pip freeze
+    - pip uninstall protobuf
+    - pip install protobuf==3.20.1
     - citbx install packages verbio-verbio8k-es-es-am
   script:
     - pytest tests/unit tests/functional --cov=asr4 --cov-report=html:coverage --cov-report=term --verbose
@@ -124,6 +129,8 @@ python:test:coverage:gpu:
   before_script:
     - source ~/.bashrc
     - CUDACXX=/usr/local/cuda/bin/nvcc LDFLAGS="-L/root/miniconda3/lib/ -liomp5" pip install .[server,gpu,test]
+    - pip uninstall protobuf
+    - pip install protobuf==3.20.1
     - citbx install packages verbio-verbio8k-es-es-am
   script:
     - pytest tests/unit tests/functional --cov=asr4 --cov-report=html:coverage --cov-report=term --verbose
@@ -214,6 +221,8 @@ testing:promote:gpu:
   before_script:
     - apt-get update && apt-get install -y asrtest-tools libffi-dev
     - pip install .[client,test]
+    - pip uninstall protobuf
+    - pip install protobuf==3.20.1
   script:
     - python --version
     - pytest tests/integration --junit-xml=report.xml --verbose --capture=no
