--- a/.gitignore
+++ b/.gitignore
@@ -128,9 +128,17 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-# Proto-related auto-generated files
-src/cli-client/verbio_speech_center_synthesizer_pb2.py
-src/cli-client/verbio_speech_center_synthesizer_pb2_grpc.py
-src/cli-client/verbio_speech_center_recognizer_pb2.py
-src/cli-client/verbio_speech_center_recognizer_pb2_grpc.py
+# Proto files
+proto/generated/recognition_streaming_pb2.py               
+proto/generated/recognition_streaming_response_pb2_grpc.py
+proto/generated/verbio_speech_center_recognizer_pb2.py
+proto/generated/recognition_streaming_request_pb2_grpc.py
+proto/generated/recognition_streaming_response_pb2.py
+proto/generated/verbio_speech_center_synthesizer_pb2_grpc.py
+proto/generated/recognition_streaming_pb2_grpc.py
+proto/generated/recognition_streaming_request_pb2.py
+proto/generated/verbio_speech_center_recognizer_pb2_grpc.py
+proto/generated/verbio_speech_center_synthesizer_pb2.py
 
+# token resource
+resources
